@TODO
	. simplifier et améliorer les API google/leaflet
	=> updateCurrentMarker(): passer les valeurs en paramètre
	=> avoir 3 méthodes différentes ? updateMarkerAddress(), updateMarkerTitle(), updateMarkerInfo() ?
	=> createMarkerFromLatLng(): supprimer le dernier argument DEPRECATED addOverlay

@version 0.1.15 - @date
	admin:
	sql:
	. ajouter le champ "vpn" à la table chantiers
	site:

@version 0.1.14 - @date 2014.05.18
	admin:
	. googlemap-v3.php: updateCurrentMarker(): le champs adresse update la position du marker
	. googlemap-v3.php: updateCurrentMarker(): fix bug du marker dupliqué à chaque changement d'adresse
	site:
	. apl.xml: reparamétrage du dossier 'language' pour la partie 'site'

@version 0.1.13 - @date 2014.04.26
	admin:
	. parametres: suppression de la page USERS (qui ne servait à rien)
	. apl: affichage du numéro de version dans le footer de la page d'acceuil du composant
	. functions: read_date_as_human(): choix de l'encodage des dates en fonction du serveur (localhost = UTF-8, ovh = ISO-8859-1)
	site:
	. views/chantier: fix fiche_inscription
	. views/chantier: ajout fiche_custom

@version 0.1.12 - @date 2014.03.25
	admin:
	. importv2chantiers: replace (MacOS ?) single quote char "Ê¼" by a real single quote "'"
	site:
	. views/chantiers: fix calendar image
	. views/chantier: fix bug displaying [FINISHED]

@version 0.1.11 - @date 2014.03.22
	sql:
	. #__apl_chantiers: ajouter le champs adresse R#2014.03.12
	admin:
	. chantier: garder le champ "ou ?" pour une adresse "poétique", et ajouter un champ adresse exacte pour google R#2014.03.12
	. chantier: le champs adresse positionne le marker sur la carte, et non le champs "ou ?" R#2014.03.12
	. importv2chantiers: ne pas importer les fichiers attachés (fiche d'inscription, etc...) R#2014.03.12
	projet NetBeans
	. ajout de la licence Affero GPL
	js:
	. osm-leaflet.php: added function localiser() to localize a marker by pressing a button

@version 0.1.10 - @date 2014.03.17
	site: