@@ -3,6 +3,10 @@ COM_APL_DESCRIPTION="Des volontaires pour la nature."
 
 COM_APL_WORLDMAP_LABEL="mappemonde"
 
+# menus title for administration backend
+COM_APL_CHANTIER_VIEW_DEFAULT_TITLE="chantier"
+COM_APL_CHANTIERS_VIEW_DEFAULT_TITLE="chantiers"
+
 # details du chantier
 COM_APL_CHANTIER_DETAILS="détails du chantier"
 COM_APL_CHANTIER_WHERE="Ou ? "
@@ -16,7 +20,6 @@ COM_APL_CHANTIER_HOWMUCH="Combien ça coûte ? "
 COM_APL_CHANTIER_MORE="En savoir plus ? "
 COM_APL_CHANTIER_REGISTER="S'inscrire ? "
 COM_APL_CHANTIER_CUSTOM="Informations complémentaires "
+COM_APL_CHANTIER_VPN_TOOLTIP="Chantier 'VPN'. Cliquez sur l'icône pour plus d'informations."
 
-COM_APL_CHANTIER_VIEW_DEFAULT_TITLE="chantier"
-COM_APL_CHANTIERS_VIEW_DEFAULT_TITLE="chantiers"
 
